MiniFramework Change Log
=========================

2017-06-10 (Version 0.10.1 released.)

* 修正Db模块未对传入的params参数校验的Bug
* 修正Cache模块未对传入的params参数校验的Bug

2017-06-05 (Version 0.10.0 released.)

* 增加对Composer的支持
* 新增Config类，用于读取配置信息
* 新增Config/database.php，用于配置数据库
* 新增Model类，开发者创建模型时，可通过继承Model获得自动创建的数据库对象
* 新增常量HTTP_CACHE_CONTROL，用于设置页面缓存
* 新增常量CONFIG_PATH，用于设置配置文件路径
* 新增常量DB_AUTO_CONNECT，用于设置数据库自动连接（默认值为false）
* 在Loader::loadClass()方法中增加对Class命名规则的校验
* 在setLayout()方法中增加对布局文件命名规则的校验
* 修正Memcache和Redis缓存类中的Bug
* 改进全局函数getRandomString()
* 更新了README
* 完善注释

2017-05-31 (Version 0.9.0 released.)

* 新增Layout类，用于替代原有的布局控制方法。
* 从View中移除getLayout()方法，新的布局控制方法请查阅Layout类。
* 向附带案例App的IndexController.php文件中，增加Models调用方法的示例代码
* 向附带案例App的IndexController.php文件中，增加Layout调用方法的示例代码
* 为保持统一的目录命名风格，将常量CACHE_PATH默认值中的cache变更为Cache
* 新增常量LAYOUT_ON，用于开启或关闭布局控制功能（默认值为false）
* 新增常量LAYOUT_PATH，用于设置布局脚本存放的路径


2017-05-28 (Version 0.8.2 released.)

* 修正全局函数库中base64EncodeImage()方法的一处bug
* 重新调整了CHANGES的格式


2016-08-18 (Version 0.8.1 released.)

* 修正Db_Mysql中的一处bug


2016-08-14 (Version 0.8.0 released.)

* 改写了view的渲染方式
* 在Params里新增了getPost和getQuery两个方法


2016-08-09

* 在Params中的checkInject()里，用preg_match替换ereg


2016-08-03

* 向全局函数库中新增了pushJson()，用于输出JSON并终止程序运行
* 针对PHP 5.3.6以前可能存在注入的漏洞进行修补

2016-06-21

* 在Action类中，增加了存放Request实例的属性，供在动作中调用。


2016-06-17

* 新增Registry类，用于全局存取变量


2016-06-16

* 在View中新增getLayout()方法，用于在视图中的指定位置调入布局文件


2016-06-15

* 在Action中新增_forward()方法
* 在Request中新增setControllerName()和setActionName()方法


2016-04-29

* 新增支持Redis的缓存类库
* 新增使用Memcache或Redis缓存类库时，可通过getMemcacheObj()或getRedisObj()获取实例化对象，便于使用未封装的方法。


2016-04-28

* 向全局函数库中新增了base64EncodeImage()用于将图片转换为base64编码


2016-01-14

* Bug fix


2016-01-13 (Version 0.7.0 released.)

* 新增支持文件存取的缓存类库
* 从Cache_Abstract中移除_connect()和close()方法
* 在Cache_Abstract中，将_set()方法更名为set()
* 在Cache_Abstract中，将_get()方法更名为get()
* 在Cache_Abstract中，将_unset()方法更名为del()


2016-01-11

* 新增支持Memcache的缓存类库
* 向全局函数库中新增2个函数chgArrayKey()和getRandomString()

