@@ -1,6 +1,11 @@
 MiniFramework Change Log
 =========================
 
+2017-06-12 (Version 0.10.2 released.)
+
+* 修正调用Params的setParams()方法时出现报错的Bug
+* 修正无法正常连接需要验证密码的Redis主机的Bug
+
 2017-06-10 (Version 0.10.1 released.)
 
 * 修正Db模块未对传入的params参数校验的Bug
